--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -110,7 +110,7 @@ These changes are expected to have profound effects on forest biodiversity and e
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. Overstory trees form canopies that play a crucial role in moderating macro-microclimate [@nakamuraForestsTheirCanopies2017; @ozanneBiodiversityMeetsAtmosphere2003] by buffering extreme temperatures along with other macroclimatic conditions in the understory. This creates a vertical stratification of biophysical environments such as temperature, light, wind, humidity and Co2 which influences leaf temperature and metabolism along the gradient.[Bertrand et al. 2011]
 
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
-Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests. Larger trees suffer more during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
+Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
 While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011] This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
@@ -177,9 +177,9 @@ This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, w
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
 
-Moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures more than pine and boreal forests [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, with pine forests maintaing warmer below canopy temperature than above [@vonarxSpatiotemporalEffectsForest2012a] 
+Diurnal moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index increases decreases light and higher maximum temperature permeability in forests, thus maintaining lower maximum daytime temperature. Decrease in crown density and leaf area index such as in pine forests that have sparse stands decreases buffering capacity [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night among all forests, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
-Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
+Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
 "max temps were higher and humidity lower in gaps vs understory regions (both at 1.5 m above the ground), see Fig. 4 - again illustrating buffering effect of the canopy".However, similar maximum temperatures have been observed during the dry season of a semi-deciduous tropical forest in Panama partially because in the dry season some canopy trees were leafless, resulting in more light reaching the sub-canopy, and more air movement between subcanopy and above-canopy air[@rey-sanchez_spatial_2016], similar results were observed in in a temperate deciduous forest in the eastern United States [@mcgregor_tree_nodate].
 
@@ -196,7 +196,7 @@ However, similar minimum temperatures under forest canopies have been observed i
 - DETAILS - REFS
 - @mcgregor_tree_nodate
 
-Along with temperature, forest canopies moderate relative humidity in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter. Dry months showed less drastic minimum RH changes in below vs upper canopy  [@vonarxSpatiotemporalEffectsForest2012a]. 
+Along with temperature, forest canopies moderate relative humidity in below-canopy microclimates. In three European forest types (Broadleaved, Non-Pine Conifer, Pine) canopy buffering decreased daily maximum $T_{air}$ and increased daily minimum RH in below-canopy microclimate compared to a nearby open area. Moderating capacity was stronger under broadleaved and non-pine conifer forests than pine, and greater in wetter conditions, and in summer and autumn months than winter [@vonarxSpatiotemporalEffectsForest2012a]. 
 
 With rising temperatures, this trend in maximum $T_{air}$ and RH would have implications for understory seedling growth, especially in high altitude temperate pine forests and montane forests  [@vonarxSpatiotemporalEffectsForest2012a, @fauset_differences_2018] (to clarify why? are these high elevation forests limited by low temperature and low rh?)  
 
@@ -279,7 +279,7 @@ Are traits shaped more by height or light?
 Max transpiration rate - increases with canopy height (Kenzo et al. 2015).
 Leaf width and characteristic dimension influence boundary layer resistance which generally is greater in wider understory leaves than upper canopy.
 Additionally, increase in leaf area also influences leaf temperature by maintaining greater leaf temperature than leaves with lower leaf area {Wright et al. 2019}
--Boundary layer and thermal sensitivity also depends of leaf width, leaf size and structure, such as lobes, leaf elongation and serration, all dissapate heat more efficiently than non-lobed leaves, wide or non serrated leaves. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
+-Boundary layer resistance and thermal sensitivity also depends of leaf width, leaf size and structure. Increase in leaf width increases stomatal resistance-- dependent on stomtal activity and boundary layer resistance [@fauset_differences_2018] such as lobes, leaf elongation and serration, all dissapate heat more efficiently than non-lobed leaves, wide or non serrated leaves. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
 Schuepp 1993; Sack et al. 2006].
 
 *Thermal time constant (probably not a lot out there)*
@@ -306,12 +306,14 @@ In practice, an important driver seems to be leaf water content per unit area (I
 
 **Many of the biophysical and trait variable reviewed above affect leaf temperature, $T_{leaf}$, which in turn has a strong influence on leaf metabolism (see following section).**
 $T_{leaf}$ is determined by the energy balance of a leaf and can be estimated based on basic biophysical principles [@campbell_introduction_1998; @muir_tealeaves_2019] (Fig. 3).
+- As light availability typically increases with tree height, leaf temperature which is largely of function of radiation input, does as well [@michaletzPlantThermoregulationEnergetics2015]. Direct sunlight in upper canopy leaves increases leaf temperature, [sometimes 1-7C above ambient air temperature, making upper canopy leaves susceptible to heat stress] more than scattered light in lower shaded leaves [@mauTemperateTropicalForest2018a]
 While small leaves remain within a few degrees of $T_{air}$, regardless of stomatal conductance, wider leaves can have temperatures deviating more from air temperature.[@fauset_differences_2018]
 Large leaves can be significantly cooler than $T_{air}$ under low radiation with stomata open, and significantly hotter under high radiation with stomata closed.  
 Leaves with open stomata and high radiation loads maintain $T_{leaf}$ similar to $T_{air}$, with coolest leaves at intermediate sizes (~10mm).
 Shaded understory leaves should tend to maintain cooler daytime leaf temperatures for any given level of stomatal conductance.
 However, counteracting this, lower wind speed in understory would reduce latent heat loss.
 Thus, under hot conditions, canopy leaves exposed to higher wind speeds would be most effective at cooling when sufficient water is available to maintain high stomatal conductance; however, their $T_{leaf}$ can be highly elevated above $T_{air}$ when stomatal conductance is limiting.
+- increase in air temperature, increases VPD, decrease in stomtal conductance during miday leading to decrease in CO2 in leaf = increase in leaf temperature in upper canopy. [@fauset_differences_2018]
 
 ![**Figure 3. Leaf temperature in response to (a) XXX, (b) XXX (key trait or environmental variables).** Examples to be produced based on energy balance model using the tealeaves R package of @muir_tealeaves_2019: https://github.com/EcoClimLab/vertical-thermal-review/issues/6. Current placeholder shows figures from Campbell&Norman.](leaf_energy_balance/C&N_figures.png)
 
@@ -325,6 +327,7 @@ Thus, under hot conditions, canopy leaves exposed to higher wind speeds would be
 In a broadleaf deciduous forest, nighttime $T_{leaf}$'s were similar in the canopy and understory	(Bolstad et al. 1999).
 Similarly, during the dry season in a tropical moist forest in Panama... (Rey-Sánchez et al. 2016).
 **However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.**
+-Large leaf to air temperature differences and high leaf temperatures were found in upper canopy of Atlantic, Brazil Forests despite much lower air temperature due to high solar radiation loads. However, leaf temperatures themselves were moderaed by air temperature. [@fauset_differences_2018].
 -	(Slot et al. 2019) and refs therein
 -	(Fauset et al. 2018)
 Sun leaves can also be  cooled relative to $T_{air}$ more than shade leaves (Rey-Sánchez et al. 2016). There's some hint of this in Bolstad et al. 1999.
@@ -347,14 +350,15 @@ nocite: |
 
 
 *Stomatal conductance*
-
+Photosynthesis can be largely constrained by stomatal conductance. 
+-"Sun exposed outer canopy leaves in tropical trees can experience temperatures up 48 C during diurnal cycle, midday stomtal closure reduces transpitrational cooling" thus elevating leaf temperature greater than air temperature (Slot et al. 2019)
 
 *Photosynthesis*
 
 **Photosynthesis is generally higher in sun leaves-- a fact that is well-established (Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020) and observed in numerous field studies.**
 This is primarily driven by the greater light available to sun leaves.
 In response to the greater light availability, sun leaves have traits allowing greater photosynthetic rates at high light,  including higher concentration of Rubsico, multiple layers of palisade parenchyma, and saturation level differs between leaves and canopies, with leaves saturating at lower light level than canopies (while a certain amount of light saturates the photosynthetic capacity of the leaf, increasing the amount of light in the canopy may increase photosynthesis in the shaded part of the canopy)
-The vertical gradient in photosythetic rates is also influenced by...
+The vertical gradient in photosythetic rates is also influenced by available concentration of N and P.
 .[thoughts: plasticity vs change in tree species composition through the canopy; differences in variability of microenvironments through the profile - highest lower down in canopy?; life history / investment strategies and hence, leaf life spans at leaves at the top vs bottom of the canopy]-- M N. Smith [agreed. Again the importance of differentiating between within-species and among species trait variation. Also; steepness of the vertical gradient in light and VPD. In very tall trees a gradient in water potential might cause a gradient in stomatal limitations of net photosynthesis]
 
 Photosynthesis increases with increasing irradiance, and saturates at quatum flux density of 400 $m^{-2}$ $s^{-1}$ to 700nm $m^{-2}$ $s^{-1}$. Photosynthesis has a peaked response to temperature, where photosynthesis is commonly found to be maximized at the prevalent ambient growing season conditions (Tan et al. 2017; Slot & Winter 2017).Beyond the optimum photosynthesis decreases as a result of stomatal closure (e.g. Slot & Winter 2017; Smith et al. 2020 [temperate/boreal refs needed) and eventually due to biochemical constraints (refs. e.g. Sage & Kubien 2007; Varhammer et al. 2015 ).Photosynthesis will also be affected by heat stress, when photoinhibition reduces photosynthesis either as a result of photoprotective; non-photochemical quenching or related to irreversible leaf damage leading to leaf necrosis. Leaves in upper canopy tend to experience more heat stress and greater photoinhibition than lower canopy leaves in conditions of water stress or drought. [@niinemetsWorldwideAnalysisWithincanopy2015] 
@@ -380,10 +384,11 @@ We're not aware of any other studies on this."we may want to argue that we have 
 *Respiration*
 
 **Similar to photosynthesis, respiration tends to be higher in sun leaves (Chen et al. 2020), but its temperature sensitivity appears to be similar between between sun and shade leaves.**
+At increasing temperatures, Photosynthetic System 2 [PS2] is particularly vulnerable. Damage to pS2  can lead to decreased electron transport rates and photosynthetic failure. Irreversible damage to PS2 is done at 40-60C [Baker 2008; @feeley_thermal_2020]
 (Bolstad et al. 1999) did a study at Coweeta, including elev gradient. 
 Found higher respiration (at reference T) in canopy leaves (@bolstad_foliar_1999). (*Martijn has some unpublished data on this that we might include: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*)
 At Coweeta, Q10 showed a variable pattern, with a slight tendency to increase down the canopy [@bolstad_foliar_1999]. (*Martijn has some unpublished data on this that we might include.unpublished data showing higher Q10 in shade than in sun leaves for 10 species or so. May make sense to include here: https://github.com/EcoClimLab/vertical-thermal-review/issues/8.*)
-Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*).
+Combining reference respiration and $Q_{10}$, @bolstad_foliar_1999 found  a modest net decrease in R for understory leaves relative to canopy leaves as T increases (*see their Fig. 1*)."Higher $Q_{10}$ values in the functional groups of upper canopy where temperatures are the highest may lead to exponential loses of C with increasing global temperatures depending upon the ability of canopy leaves to acclimate" [@cavaleri_foliar_2008]
 Thus, @bolstad_foliar_1999 found evidence of acclimation, but there remained a declining trend of respiration with elevation.
 
 
