--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -112,7 +112,7 @@ Forests are vertically and horizontally stratified, with trees of different size
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011] This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares] which may have further impacts on understory species ontogeny with rising temperatures. 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
 
@@ -247,6 +247,9 @@ Adaptions of traits to ranges of sun-exposure or shaded-ness also vary within a 
 Understory species may have conservative  growth strategies because they are resource (light) limited. Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
 They tend to have long-lived leaves with high LMA while shade leaves of canopy trees have large leaves with low LMA. Those differences in traits are likely to affect their thermal properties as well.
 Additionally, shade leaves in the understory are of three categories; 1. shade leaves of canopy trees--top of the tree is sun exposed, bottom is shaded. 2. seedlings/saplings of canopy trees that will eventually, if they survive, reach the canopy. 3 understory plants that complete their lifecycle in the shaded understory. These groups are likely to have different traits, and if we expect 'shade' plants to have a different sensitivity to climate change than sun leaves, the consequences of climate change for demography and species community composition of the forest will depend strongly on the category of shade plants being considered.[refs]
+
+Cateogorization of sun and shade tolerance from Niinemetes and Valladares, 2006: "The five-level scale used for shade tolerance (1,
+very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%"
 
 Passing light in the forest understory often caused by over-canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
 
