--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -112,12 +112,12 @@ Forests are vertically and horizontally stratified, with trees of different size
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares] which may have further impacts on understory species ontogeny with rising temperatures. 
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
 Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
 
+While there is evidence for temperature driven shifts in forest dynamics, leaf-level temperature and metabolism changes influenced by biophysical conditions and warming in overstory and understory is still unclear.Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
-With such changing forest dynamics, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
 
@@ -161,7 +161,7 @@ The vertical structure and hence, microenvironments of forest canopies vary seas
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season but excluding periods (in deciduous forests) when no leaves are present.
 
 
-Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with canopy height, canopy structure, across species and forests [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies are more exposed to irradiance and limit light through shading to canopy interiors, lower canopy layers and understories [@fauset_differences_2018; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
+Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values of PAR in ranges of blue, orange and red. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
  Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005].
@@ -171,13 +171,14 @@ This difference in light regime along a vertical profile is an important driver 
 
 **Wind speeds are also higher at the top of the canopy (Fig. `r fig_NEON_vertical`).**
 *(fill in some specifics from the NEON analysis)*
-Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months. Wind speed in dry season of a semi-deciduous forests at upper canopy has been observed to be higher than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
-This results in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of canopy leaves with small leaf sizes making them more advantageous in dissapating heat efficiently [Bauerle et al. 2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width [along the vertical gradient], such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
+Consistent with the results from NEON sites, higher wind speed at greater heights within a forest have previously been observed in both closed canopy forests [Barnard and Bauerle, 2016; @mcgregor_tree_nodate] and open savannas [@curtis_intracanopy_2019] in summer months.
+Wind speed in the upper canopy of a semi-deciduous tropical forest has been observed to be higher in dry season of than in upper canopy wet season [@rey-sanchez_spatial_2016].[*double check*] 
+Greater upper canopy wind speeds result in higher boundary layer conductance ($g_{a}$) for canopy leaves, which increases linearly with increase in wind velocity [Daudet et al. 1999]. Large $g_{a}$ to heat transfer results in smaller difference in $T_{air}$ and $T_{leaf}$, this is more typical of small leaves in upper canopy that them more advantageous in dissapating heat efficiently than larger leaves[Bauerle et al. 2011]. In low wind conditions, because $g_{a}$ to heat transfer is small enough, $T_{leaf}$ in upper canopy can become substantially elevated than $T_{air}$ under high radiation [@martin_boundary_1999]. Additionally, thickness of air layer is proportional to boundary layer resistance at the surface of the leaf through which water vapor diffuses after leaving the stomata [@martin_boundary_1999; @robertsStomatalBoundaryLayerConductances1990a; Stockes et al. 2006]. 
 
 **Air temperature, $T_{air}$, is sometimes significantly buffered by forest canopies (Fig. `r fig_NEON_vertical`).**
 Studies comparing $T_{air}$ under forest canopies with nearby clearings have found lower maximum temperatures under forest canopies globally [De Frenne et al. 2019], and recent evidence shows of a similar trend across Europe [@zellweger_seasonal_2019; @vonarxSpatiotemporalEffectsForest2012] and in the northwestern United States [@davis_microclimatic_2019]. 
 
-Diurnal moderating capacity of under forest microclimate differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability in forests, thus maintaining lower maximum daytime temperature. Thus, pine forests have sparse stands resulting in decreased buffering capacity [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night among, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
+Diurnal moderating capacity differs between forests with varying canopy structure, crown density, and seasons. Tropical, and temperate broadleaved and non-pine conifer forests maintain lower daytime maximum temperatures than pine and boreal forests. Increase in crown density and leaf area index decreases light and higher maximum temperature permeability into forest understory, thus maintaining greater lower maximum daytime temperature. Comparitively open forests such as pine forests have sparse stands resulting in decreased buffering capacity in understory and closer air temperatures to nearby clearings [De Frenne et al. 2019; @vonarxSpatiotemporalEffectsForest2012a]. This relationship is reveresed during the night, however, with pine forests maintaining warmer below canopy temperature than above[@vonarxSpatiotemporalEffectsForest2012a] 
 
 Similarly, maximum air temperatures were higher above than below tropical forest canopies during wet seasons in Panama [@rey-sanchez_spatial_2016], temperate forests in Switzerland [@vonarxSpatiotemporalEffectsForest2012a] and coastal Brazil [@fauset_differences_2018, Tymen et al. 2017].
 
@@ -241,7 +242,7 @@ However vertical climate gradients within forests are known to be steeper than t
 
 ## Trait variation 
 
-Leaf traits are shaped by intra canopy light and height, and show intra-canopy plasticity in accordance to intensity and availability of light. Taller trees tend to be exposed to greater irradiance than dense lower canopy and shorter understory trees shaded by overstory. Degrees of high irradiance has consequential adaptations in leaf morphology compared to degrees of low irradiance to shaded-ness [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. This dichotomy in leaf traits that vary with light intensity generally differ within intra-canopy, however the degree of intra-canopy plasticity also varies across species and geographically [Sack et al. 2006; Ishii et al. 2018].
+Leaf traits are shaped by intra canopy light and height, and show intra-canopy plasticity in accordance with intensity and availability of light. Taller trees in dense forests tend to be exposed to greater irradiance than lower canopy and shorter understory trees shaded by overstory.Degrees of high irradiance has consequential adaptations in leaf morphology compared to degrees of low irradiance to shaded-ness [@poorterMetaanalysisPlantResponses2019b; Sack et al 2006] within- and across species [Ishii et al. 2018; @niinemetsWorldwideAnalysisWithincanopy2015]. This dichotomy in leaf traits that vary with light intensity generally differ within intra-canopy, however the degree of intra-canopy plasticity also varies across species and geographically [Sack et al. 2006; Ishii et al. 2018].
 
 Adaptions of traits to ranges of sun-exposure or shaded-ness also vary within a forest strata. 
 Understory species may have conservative  growth strategies because they are resource (light) limited. Spending their lifecycle in the shade means they have different pressures than plants that get the bulk of their carbon from sun-exposed leaves, but can maintain a few layers of shade leaves as well. Their traits will be different from shade leaves of canopy trees as well. E.g.
@@ -251,7 +252,7 @@ Additionally, shade leaves in the understory are of three categories; 1. shade l
 Cateogorization of sun and shade tolerance from Niinemetes and Valladares, 2006: "The five-level scale used for shade tolerance (1,
 very intolerant; 2, intolerant; 3, moderately tolerant; 4,tolerant; 5, very tolerant) corresponds approximately to the following light availabilities expressed as percentage of full sunlight: 1,>50%; 2, 25-50%; 3, 10-25%; 4, 5-10%; 5, 2-5%"
 
-Passing light in the forest understory often caused by over-canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
+Passing light in the forest understory often caused by over-canopy vegetation and wind speed called sunflecks cause a different type of morphological adaptation in shaded leaves [characterized by low LMA and greater effective leaf width] that make them efficient in capturing >50% of light through sunflecks for photosynthesis [@chazdonPhotosyntheticLightEnvironments1984]
 
 [I think that this distinction should be addressed throughout the manuscript, so that it is always clear that the reader knows whether the cited references are about inter- or intra-specific variation, and that we address the different trait axes (Marielle made a comment on this earlier as well, that within species patterns may not follow leaf economics spectrum expectations). Ideally we would address the different categories, but if lack of information forces us to focus on just within species or just across species, this should still be made clear. photosynthesis, and canopy-level carbon uptake. They don't have to be treated separately, but it should always be clear which is being referred to. And in the consequences for scaling section this is of course also relevant.]
 
@@ -286,6 +287,7 @@ Leaf width and characteristic dimension influence boundary layer resistance whic
 Leaf temperature increases with leaf area {Wright et al. 2019}
 -Boundary layer resistance and thermal sensitivity also depends of leaf width, leaf size and structure. Increase in leaf width increases stomatal resistance-- dependent on stomtal activity and boundary layer resistance [@fauset_differences_2018]. Leaf characteristics such as lobes, leaf elongation and serration, all facilitate in dissapating heat more efficiently. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies[Vogel 1970; Roth-Nebelsick 2001;
 Schuepp 1993; Sack et al. 2006].
+-Boundary layer thickness, depth and boundary layer resistance increases with leaf size and effective leaf width [along the vertical gradient], such that the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, therefore allowing small leaves to dissapate heat more efficiently than large leaves [@leighInfluenceLeafSize2017].
 
 *Thermal time constant (probably not a lot out there)*
 -	Curtis et. al, 2018 – higher in more exposed leaves (heat up slower, cool slower)
