--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -112,11 +112,11 @@ Forests are vertically and horizontally stratified, with trees of different size
 The capacity of buffering largly depends on canopy cover and water availability [@davis_microclimatic_2019] each of which is subjected to change through climate-driven disturbances such as drought, deforestation, fire and related disruptions.
 Increasing temperature has profound impacts on canopy cover such that temperate and tropical forest canopies are already or will soon be functioning beyond their optimal photosynthetic threshold [@mau_temperate_2018;@huangAirTemperatureOptima2019]. Additionally, increased temperature is driving more frequent droughts causing hydraulic limitation in forests [ref]. Water limitation in forests alters species thermoregulation [@sastry_leaf_2018], also decreases tree canopy circumference [@aussenacInteractionsForestStands2000]. Evidence shows that larger trees suffer more than small trees during drought, which may contribute to increasing tree mortality in forests around the world [@bennettLargerTreesSuffer2015; @stovallTreeHeightExplains2019a; @mcdowellMechanismsPlantSurvival2008; @allenUnderestimationGlobalVulnerability2015, Brienen et al. 2015]. Increases in loss of canopy cover [@senfCanopyMortalityHas2018a; @senfMappingForestDisturbance2020] are also associated with reduced canopy structural complexity, altering microclimates with local heating effects and surface energy balance components [@zellweger_forest_2020; @starkReframingTropicalSavannization2020].
 
-While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. Temperature is directly linked with plant metabolic processes and growth, thus even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. This is leading to thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
-Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [@mcdowellMechanismsPlantSurvival2008].
+While forest microclimates are insulated from the extremes of macroclimate warming, they are still experiencing warming. As a result, understories experience a different set of pressures with rising temperature than overstory [Bartholomew et al. 2020]. Since temperature is directly linked with plant metabolic processes and growth, even around 1 degree of warming can lead to changes in plant species composition and growth [Bertrand et al.2011]. Evidence shows reduced growth of understory trees with warmer temperatures in mesic temperate forests[Rollinson et al. 2020]along with thermophilization in plant communities and reshuffling of species acclimated to cooler [mean annual] temperatures[@zellweger_forest_2020; @zellweger_seasonal_2019; @defrenneMicroclimateModeratesPlant2013; @suggittExtinctionRiskClimate2018; @scheffersMicrohabitatsReduceAnimal2013]. Considering more frequent occurences of drought, extensive analysis also shows negetive correlation between species shade tolerance and drought tolerance globally [Niinemetes and Valladares, 2006] which may have further impacts on understory species with rising temperatures. 
+Microclimate warming has implications for forest regeneration[@vonarxSpatiotemporalEffectsForest2012a] as temperature driven photosynthesis limitation is leading to reduced tree growth rates, driving a global trend towards disequillibrium in forests with younger trees [McDowell et al. 2020].
 Reductions in canopy cover can lead to non-linear threshold responses, causing dramatic shifts from one forest state to another (e.g., transition from forest to savanna-like vegetation in tropical forest regions through "savannization"), with energy balance impacts and implications for forest-atmosphere interactions (Stark et al. 2020). Each of these changes have potential feedbacks to climate change.
 
-While there is evidence for temperature driven shifts in forest dynamics, leaf-level temperature and metabolism changes influenced by biophysical conditions and warming in overstory and understory is still unclear.Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
+While there is evidence for temperature driven shifts in forest dynamics, leaf-level temperature and metabolism changes influenced by biophysical conditions and warming in overstory and understory is still unclear. Thus, it is becoming more important than ever to understand foliage thermal sensitivity in forests along the vertical canopy profile, from the understory to the top of the canopy influenced by biophysical environmental gradient.This will provide crucial insights for how rising temperature affects forest ecology and biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions [with additional feedbacks to forest structure and microclimates].
 
 
 (@niinemetsWithincanopyVariationRate2004a highlights how biophysical and photosynthetic gradient varies along the vertical canopy profile, however our current knowledge of this topic is lacking.)
@@ -161,7 +161,7 @@ The vertical structure and hence, microenvironments of forest canopies vary seas
 In this review, we focus primarily on growing season conditions, including leaf phenology at the edges of the growing season but excluding periods (in deciduous forests) when no leaves are present.
 
 
-Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values of PAR in ranges of blue, orange and red. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
+Light conditions, specifically photosynthetically active radiation (PAR) varies along the vertical gradient with leaf area index (LAI), canopy height, canopy structure, across species and forest types [@koike_leaf_2001] due to cumulative layers of vegetation. Generally, upper canopies in dense forests are exposed to greater PAR values and limit light to canopy interiors, lower canopy layers and understories. Shaded regions under canopy cover experience lower values and quality of PAR in ranges of blue, orange and red. The gradient of light is more pronounced under broadleaved forests than conifers[@aussenacInteractionsForestStands2000; @niinemetsPackingPhotosyntheticMachinery2009; Parker 1995; @poorterMetaanalysisPlantResponses2019b]
 (Fig. `r fig_NEON_vertical`).
 In heterogeneous canopies [with high gap fractions], distance from the outer canopy is a better proxy for light environment than height (Parker 1995) and lower canopy light environments are highly variable, ranging from high light gap to deeply shaded understory regions [@chazdonPhotosyntheticLightEnvironments1984; @tymenQuantifyingMicroenvironmentalVariation2017; @smithSeasonalDroughtrelatedChanges2019]. 
  Tropical forests with dense overstory limit light to understories and subsequent layers, where tropical forest floors receive approximately 1-2%  of the light incident to the top of the canopy [@robertsStomatalBoundaryLayerConductances1990a; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019], whereas mixed-wood boreal and Northern temperate forest floors receive around 4-5% of full sunlight [Bartemucci et al. 2005].
@@ -271,7 +271,7 @@ Here, we focus on intra-canopy traits that are important for shaping leaf temper
 ```
 ---
 nocite: | 
-  @mau_temperate_2018; @hernandezSimilarTemperatureDependence2020; @cobleHowVerticalPatterns2016a; @slotPhotosyntheticHeatTolerance2019; @valladaresShadeToleranceKey2008b; @beaumontVerticalGradientsLeaf2009; @sackHowStrongIntracanopy2006,@cobleLightDrivesVertical2014; @scartazzaInvestigatingEuropeanBeech2016; @martinCovarianceSunShade2020; @bolstad_foliar_1999; @harleyEffectsLightTemperature1996; @kullDistributionLeafPhotosynthetic1998; @kafutiFoliarWoodTraits2020; @duursmaVerticalCanopyGradients2006; @cobleLightDrivesVertical2014a; @vanwittenbergheVariabilityStomatalConductance2012; @poorterLeafOpticalProperties1995; @poorterMetaanalysisPlantResponses2019b; @cavaleri_foliar_2008; @niinemetsAcclimationHighIrradiance1998
+  @mau_temperate_2018; @hernandezSimilarTemperatureDependence2020; @cobleHowVerticalPatterns2016a; @slotPhotosyntheticHeatTolerance2019; @valladaresShadeToleranceKey2008b; @beaumontVerticalGradientsLeaf2009; @sackHowStrongIntracanopy2006,@cobleLightDrivesVertical2014; @scartazzaInvestigatingEuropeanBeech2016; @martinCovarianceSunShade2020; @bolstad_foliar_1999; @harleyEffectsLightTemperature1996; @kullDistributionLeafPhotosynthetic1998; @kafutiFoliarWoodTraits2020; @duursmaVerticalCanopyGradients2006; @cobleLightDrivesVertical2014a; @vanwittenbergheVariabilityStomatalConductance2012; @poorterLeafOpticalProperties1995; @poorterMetaanalysisPlantResponses2019b; @cavaleri_foliar_2008; @niinemetsAcclimationHighIrradiance1998; Panditharathna et al. 2008; Baltzer and Thomas 2005; Kusi and Karasi 2020
 ---
 
 Are traits shaped more by height or light?
